# backend/models/user_model.js
@@ -3,7 +3,7 @@ const bcrypt=require('bcryptjs');
 
 const user={
     getUser(id_user, callback){
-        return db.query("SELECT fname, lname, state, temp_restriction FROM user WHERE id_user = ?", [id_user], callback);
+        return db.query("SELECT fname, lname, state FROM user WHERE id_user = ?", [id_user], callback);
     }, // for admins
 
     listAllUsers(callback){
